--- a/index.html
+++ b/index.html
@@ -267,22 +267,143 @@
 
             <div class="swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
-                    <div class="swiper-slide">Slide 6</div>
+                    <div class="swiper-slide">
+                        <div class="projects__image">
+                            <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-1-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Final Degree Thesis Project</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
+                            <p class="projects__description">
+                                How can Interactive Technologies be Leveraged to Increase User Engagement in the FIA World Rally Championship Online Broadcasting Platform?
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide"><div class="projects__image">
+                            <img src="assets/img/project-2.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-2-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Individual Studio II Project</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">Poppy the Shy Wall</h3>
+                            <p class="projects__description">
+                                A material exploration of AI body detection in the context of Architecture-centred Interaction Design
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="projects__image">
+                            <img src="assets/img/project-3.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-3-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Interactivity Course Journal</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">Hand-in PDF Archive</h3>
+                            <p class="projects__description">
+                                Module 1: Exploring expressivity with point lights.<br>
+                                Module 2: Nuanced control with sound.<br>
+                                Module 3: Kinaesthetic Interaction & Machine Learning.
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="projects__image">
+                            <img src="assets/img/project-4.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-4-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Tangible and Embodied Interaction(TEI) Course Journal</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">Hand-in PDF Archive</h3>
+                            <p class="projects__description">
+                                Module 1: Glanceability<br>
+                                Module 2: Smell and Vortex Propagation<br>
+                                Module 3: Soft<br>
+                                Module 4: IoT & AI
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide"> <div class="projects__image">
+                            <img src="assets/img/project-5.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-5-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Mathendahl, Niederkorn, Luxembourg</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">3D Visualisations</h3>
+                            <p class="projects__description">
+                                Project for Agence d'Architecture Stan Berbec
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="projects__image">
+                            <img src="assets/img/project-6.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-6-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Pfaffenthal, Luxembourg</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">2D Blueprints, 3D Visualisations</h3>
+                            <p class="projects__description">
+                                Iterative Design in 2D, modifying plans according to stakeholders needs.<br>
+                                Modelling in 3D to help stakeholders visualise project.
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
                 
-                <div class="swiper-scrollbar"></div>
+                <!--<div class="swiper-scrollbar"></div>-->
             </div>
-
-
          </section>
          <!--
          <section class="projects section" id="projects">
