--- a/index.html
+++ b/index.html
@@ -268,7 +268,10 @@
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
+                        <div class="projects__image">
+                            <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
+                        </div>
+                        
                         <div class="projects__content">
                             <h2 class="projects__title" style="text-align: center;">Final Degree Thesis Project</h2>
                             <h3 class="projects__subtitle" style="text-align: center;">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
