--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
                     </p>
                 </div>
                 <div class="services__card">
-                    <i class="ri-vibration-line services__icon"></i>
+                    <i class="ri-fingerprint-line services__icon"></i>
                     <h3 class="services__title">Multimodal Interaction & Haptic Feedback Design</h3>
                     <p class="services__description">
                         Designing experiences that incorporate sound, touch, and movement.
                     </p>
                 </div>
                 <div class="services__card">
-                    <i class="ri-vr-line services__icon"></i>
+                    <i class="ri-goggles-line services__icon"></i>
                     <h3 class="services__title">Immersive Experiences (VR, AR, MR)</h3>
                     <p class="services__description">
                         Designing interactions for virtual, augmented, or mixed reality applications.
@@ -271,7 +271,7 @@
                         <div class="projects__image">
                             <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
                         </div>
-                        
+
                         <div class="projects__content">
                             <h2 class="projects__title" style="text-align: center;">Final Degree Thesis Project</h2>
                             <h3 class="projects__subtitle" style="text-align: center;">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
