--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                      Proficient in design tools such as Adobe Creative Suite, Figma, and AutoCAD, 
                      I also have a foundational understanding of programming languages including 
                      HTML, CSS, JavaScript, and Python. My ability to analyze complex challenges, 
-                     synthesize solutions, and adapt to dynamic environments makes me a valuable asset to any design team.</li>
+                     synthesize solutions, and adapt to dynamic and diverse environments makes me a valuable asset to any design team.</li>
                      <li></li>
                   </ul>
                </div>
