--- a/index.html
+++ b/index.html
@@ -277,20 +277,18 @@
                             </p>
                         </div>
                         <div class="projects__buttons">
-                            <a href="https://berbec-chris.github.io/assets/pages/project-1-page.pdf" target="_blank" class="projects__button button">
-                                <i class="ri-arrow-right-up-line"></i>
-                            </a>
                             <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
                                 <i class="ri-github-line"></i>
+                            </a>
+                            <a href="https://berbec-chris.github.io/assets/pages/project-1-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
                             </a>
                         </div>
                     </div>
 
-                    <div class="swiper-slide"><div class="projects__image">
+                    <div class="swiper-slide">
+                        <div class="projects__image">
                             <img src="assets/img/project-2.jpg" alt="image" class="projects__img">
-                            <a href="https://berbec-chris.github.io/assets/pages/project-2-page.pdf" target="_blank" class="projects__button button">
-                                <i class="ri-arrow-right-up-line"></i>
-                            </a>
                         </div>
                         <div class="projects__content">
                             <h2 class="projects__title" style="text-align: center;">Individual Studio II Project</h2>
@@ -303,15 +301,15 @@
                             <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
                                 <i class="ri-github-line"></i>
                             </a>
+                            <a href="https://berbec-chris.github.io/assets/pages/project-2-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
                         </div>
                     </div>
 
                     <div class="swiper-slide">
                         <div class="projects__image">
                             <img src="assets/img/project-3.jpg" alt="image" class="projects__img">
-                            <a href="https://berbec-chris.github.io/assets/pages/project-3-page.pdf" target="_blank" class="projects__button button">
-                                <i class="ri-arrow-right-up-line"></i>
-                            </a>
                         </div>
                         <div class="projects__content">
                             <h2 class="projects__title" style="text-align: center;">Interactivity Course Journal</h2>
@@ -326,15 +324,15 @@
                             <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
                                 <i class="ri-github-line"></i>
                             </a>
+                            <a href="https://berbec-chris.github.io/assets/pages/project-3-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
                         </div>
                     </div>
 
                     <div class="swiper-slide">
                         <div class="projects__image">
                             <img src="assets/img/project-4.jpg" alt="image" class="projects__img">
-                            <a href="https://berbec-chris.github.io/assets/pages/project-4-page.pdf" target="_blank" class="projects__button button">
-                                <i class="ri-arrow-right-up-line"></i>
-                            </a>
                         </div>
                         <div class="projects__content">
                             <h2 class="projects__title" style="text-align: center;">Tangible and Embodied Interaction(TEI) Course Journal</h2>
@@ -350,14 +348,14 @@
                             <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
                                 <i class="ri-github-line"></i>
                             </a>
+                            <a href="https://berbec-chris.github.io/assets/pages/project-4-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
                         </div>
                     </div>
 
                     <div class="swiper-slide"> <div class="projects__image">
                             <img src="assets/img/project-5.jpg" alt="image" class="projects__img">
-                            <a href="https://berbec-chris.github.io/assets/pages/project-5-page.pdf" target="_blank" class="projects__button button">
-                                <i class="ri-arrow-right-up-line"></i>
-                            </a>
                         </div>
                         <div class="projects__content">
                             <h2 class="projects__title" style="text-align: center;">Mathendahl, Niederkorn, Luxembourg</h2>
@@ -370,15 +368,15 @@
                             <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
                                 <i class="ri-github-line"></i>
                             </a>
+                            <a href="https://berbec-chris.github.io/assets/pages/project-5-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
                         </div>
                     </div>
 
                     <div class="swiper-slide">
                         <div class="projects__image">
                             <img src="assets/img/project-6.jpg" alt="image" class="projects__img">
-                            <a href="https://berbec-chris.github.io/assets/pages/project-6-page.pdf" target="_blank" class="projects__button button">
-                                <i class="ri-arrow-right-up-line"></i>
-                            </a>
                         </div>
                         <div class="projects__content">
                             <h2 class="projects__title" style="text-align: center;">Pfaffenthal, Luxembourg</h2>
@@ -391,6 +389,9 @@
                         <div class="projects__buttons">
                             <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
                                 <i class="ri-github-line"></i>
+                            </a>
+                            <a href="https://berbec-chris.github.io/assets/pages/project-6-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
                             </a>
                         </div>
                     </div>
