--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                      My experience spans freelance consulting in UX/UI design, architectural visualization, and event organization, 
                      equipping me with a versatile skill set that combines technical expertise with creative problem-solving. 
                   </p>
-                  <p></p>
+                  <li></li>
                   <ul class="about__list">
                      <li class="about__item">
                      Proficient in design tools such as Adobe Creative Suite, Figma, and AutoCAD, 
@@ -150,11 +150,13 @@
                   </ul>
                </div>
             </div>
-            <a href="#services" class="about__scroll">
-                <div class="about__scroll-box">
-                    <i class="ri-arrow-down-s-line"></i>
-                </div>
-            </a>
+            <div class="about__scroll">
+                <a href="#services">
+                    <div class="about__scroll-box">
+                        <i class="ri-arrow-down-s-line"></i>
+                    </div>
+                </a>
+            </div>
          </section>
 
          <!--==================== SERVICES ====================-->
