--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </p>
                 </div>
                 <div class="services__card">
-                    <i class="ri-goggles-line services__icon"></i>
+                    <i class="ri-goggle-line services__icon"></i>
                     <h3 class="services__title">Immersive Experiences (VR, AR, MR)</h3>
                     <p class="services__description">
                         Designing interactions for virtual, augmented, or mixed reality applications.
