--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
                     <a href="https://github.com/Berbec-Chris" target="_blank" class="home__social-link">
                         <i class="ri-github-fill"></i>
                     </a>
+
+                    <a href="https://berbec-chris.github.io/assets/pages/resume.pdf" target="_blank" class="home__social-link">
+                        <i class="ri-file-text-line"></i>
+                        <span class="home__social-text">My Resume</span>
+                    </a>
                 </div>
 
                 <a href="#about" class="home__scroll">
