--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
                             <img src="assets/img/project-6.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title" style="text-align: center;">Pfaffenthal, Luxembourg</h2>
-                            <h3 class="projects__subtitle" style="text-align: center;">2D Blueprints, 3D Visualisations</h3>
+                            <h2 class="projects__title" style="text-align: center;">Remich, Luxembourg</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">Preliminary Project</h3>
                             <p class="projects__description">
-                                Iterative Design in 2D, modifying plans according to stakeholders needs.<br>
-                                Modelling in 3D to help stakeholders visualise project.
+                                Assisting initial project pilot design through iterative sketches.<br>
+                                2D blueprints.
                             </p>
                         </div>
                         <div class="projects__buttons">
