--- a/index.html
+++ b/index.html
@@ -389,6 +389,25 @@
                             </a>
                         </div>
                     </div>
+
+                    <div class="swiper-slide">
+                        <div class="projects__image">
+                            <img src="assets/img/project-7.jpg" alt="image" class="projects__img">
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Rollingergrund, Luxembourg</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">2D Blueprints</h3>
+                            <p class="projects__description">
+                                Iterative 2D blueprints creation and modification.
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-7-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="swiper-pagination"></div>
