--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                             <h2 class="projects__title" style="text-align: center;">Final Degree Thesis Project</h2>
                             <h3 class="projects__subtitle" style="text-align: center;">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
                             <p class="projects__description">
-                                Leveraging interactive technologies to increase user engagement on FIA WRC's Online Broadcasting Platform?
+                                Exploring interactive technologies to increase user engagement on FIA WRC's Online Broadcasting Platform
                             </p>
                         </div>
                         <div class="projects__buttons">
