--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                         </div>
 
                         <div class="projects__content">
-                            <h2 class="projects__title" style="text-align: center;">Final Degree Thesis Project</h2>
-                            <h3 class="projects__subtitle" style="text-align: center;">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
+                            <h2 class="projects__title">Final Degree Thesis Project</h2>
+                            <h3 class="projects__subtitle">Increasing User Engagement in Online FIA WRC Broadcasts</h3>
                             <p class="projects__description">
                                 Exploring interactive technologies to increase user engagement on FIA WRC's Online Broadcasting Platform
                             </p>
@@ -299,8 +299,8 @@
                             <img src="assets/img/project-2.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title" style="text-align: center;">Individual Studio II Project</h2>
-                            <h3 class="projects__subtitle" style="text-align: center;">Poppy the Shy Wall</h3>
+                            <h2 class="projects__title">Individual Studio II Project</h2>
+                            <h3 class="projects__subtitle">Poppy the Shy Wall</h3>
                             <p class="projects__description">
                                 A material exploration of AI body detection in the context of Architecture-centred Interaction Design
                             </p>
@@ -317,8 +317,8 @@
                             <img src="assets/img/project-3.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title" style="text-align: center;">Interactivity Course Journal</h2>
-                            <h3 class="projects__subtitle" style="text-align: center;">Hand-in PDF Archive</h3>
+                            <h2 class="projects__title">Interactivity Course Journal</h2>
+                            <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
                             <p class="projects__description">
                                 Module 1: Exploring expressivity with point lights.<br>
                                 Module 2: Nuanced control with sound.<br>
@@ -337,8 +337,8 @@
                             <img src="assets/img/project-4.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title" style="text-align: center;">Tangible and Embodied Interaction(TEI) Course Journal</h2>
-                            <h3 class="projects__subtitle" style="text-align: center;">Hand-in PDF Archive</h3>
+                            <h2 class="projects__title">Tangible and Embodied Interaction(TEI) Course Journal</h2>
+                            <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
                             <p class="projects__description">
                                 Module 1: Glanceability<br>
                                 Module 2: Smell and Vortex Propagation<br>
@@ -357,8 +357,8 @@
                             <img src="assets/img/project-5.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title" style="text-align: center;">Mathendahl, Niederkorn, Luxembourg</h2>
-                            <h3 class="projects__subtitle" style="text-align: center;">3D Visualisations</h3>
+                            <h2 class="projects__title" >Mathendahl, Niederkorn, Luxembourg</h2>
+                            <h3 class="projects__subtitle">3D Visualisations</h3>
                             <p class="projects__description">
                                 Project for Agence d'Architecture Stan Berbec
                             </p>
@@ -375,8 +375,8 @@
                             <img src="assets/img/project-6.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title" style="text-align: center;">Remich, Luxembourg</h2>
-                            <h3 class="projects__subtitle" style="text-align: center;">Preliminary Project</h3>
+                            <h2 class="projects__title">Remich, Luxembourg</h2>
+                            <h3 class="projects__subtitle">Preliminary Project</h3>
                             <p class="projects__description">
                                 Assisting initial project pilot design through iterative sketches.<br>
                                 2D blueprints.
@@ -394,8 +394,8 @@
                             <img src="assets/img/project-7.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title" style="text-align: center;">Rollingergrund, Luxembourg</h2>
-                            <h3 class="projects__subtitle" style="text-align: center;">2D Blueprints</h3>
+                            <h2 class="projects__title">Rollingergrund, Luxembourg</h2>
+                            <h3 class="projects__subtitle">2D Blueprints</h3>
                             <p class="projects__description">
                                 Iterative 2D blueprints creation and modification.
                             </p>
