--- a/index.html
+++ b/index.html
@@ -317,12 +317,12 @@
                             <img src="assets/img/project-3.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title">Interactivity Course Journal</h2>
-                            <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
+                            <h2 class="projects__title">Interactivity</h2>
+                            <h3 class="projects__subtitle">Course Journal Archive</h3>
                             <p class="projects__description">
-                                Module 1: Exploring expressivity with point lights.<br>
-                                Module 2: Nuanced control with sound.<br>
-                                Module 3: Kinaesthetic Interaction & Machine Learning.
+                                M1: Exploring expressivity with point lights.<br>
+                                M2: Nuanced control with sound.<br>
+                                M3: Kinaesthetic Interaction & Machine Learning.
                             </p>
                         </div>
                         <div class="projects__buttons">
@@ -337,13 +337,13 @@
                             <img src="assets/img/project-4.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title">Tangible and Embodied Interaction(TEI) Course Journal</h2>
-                            <h3 class="projects__subtitle">Hand-in PDF Archive</h3>
+                            <h2 class="projects__title">Tangible and Embodied Interaction(TEI)</h2>
+                            <h3 class="projects__subtitle">Course Journal Archive</h3>
                             <p class="projects__description">
-                                Module 1: Glanceability<br>
-                                Module 2: Smell and Vortex Propagation<br>
-                                Module 3: Soft<br>
-                                Module 4: IoT & AI
+                                M1: Glanceability<br>
+                                M2: Smell and Vortex Propagation<br>
+                                M3: Soft<br>
+                                M4: IoT & AI
                             </p>
                         </div>
                         <div class="projects__buttons">
