--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             <img src="assets/img/project-2.jpg" alt="image" class="projects__img">
                         </div>
                         <div class="projects__content">
-                            <h2 class="projects__title">Individual Studio II Project</h2>
+                            <h2 class="projects__title">Studio II Individual Project</h2>
                             <h3 class="projects__subtitle">Poppy the Shy Wall</h3>
                             <p class="projects__description">
                                 A material exploration of AI body detection in the context of Architecture-centred Interaction Design
