--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 		  </div>
 
 		  <div class="col-md-6 d-flex">
-			<div class="img" style="background-image: url(images/Subject-5.png);"></div>
+			<div class="img" style="background-image: url(images/Subject-6-Source.png);"></div>
 		  </div>
 		</div>
       </div>
