--- a/index.html
+++ b/index.html
@@ -624,6 +624,19 @@
               </ul>
             </div>
           </div>
+
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4 ml-md-4">
+              <h2 class="ftco-heading-2"></h2>
+              <ul class="list-unstyled">
+                <li></li>
+                <li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+              </ul>
+            </div>
+
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
