--- a/index.html
+++ b/index.html
@@ -627,18 +627,6 @@
 
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2"></h2>
-              <ul class="list-unstyled">
-                <li></li>
-                <li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-              </ul>
-            </div>
-
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
@@ -647,6 +635,18 @@
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
+            </div>
+          </div>
+
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4">
+            	<h2 class="ftco-heading-2"></h2>
+            	<div class="block-23 mb-3">
+	              <ul>
+	                <li><span class="text"></span></a></li>
+	                <li><span class="text"></span></a></li>
+	              </ul>
+	            </div>
             </div>
           </div>
 
