--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Parametric 3D Modelling</h3>
+							<h3>3D BIM Modelling</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
@@ -416,8 +416,8 @@
 							<h3>Hardware and microsoldering</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-							    <span>80%</span>
+							  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+							    <span></div>65%</span>
 							  	</div>
 							</div>
 						</div>
