--- a/index.html
+++ b/index.html
@@ -629,11 +629,13 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                <li><a href="#home-section"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+                <li><a href="#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
+				<li><a href="#resume-section"><span class="icon-long-arrow-right mr-2"></span>Resume</a></li>
+                <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
+				<li><a href="#skills-section"><span class="icon-long-arrow-right mr-2"></span>Skills</a></li>
+                <li><a href="#projects-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
+                <li><a href="#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
           </div>
@@ -655,8 +657,8 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+352 621 640 022</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">berch730@gmail.com</span></a></li>
+	                <li><a href="tel:00352621694022"><span class="icon icon-phone"></span><span class="text">+352 621 640 022</span></a></li>
+	                <li><a href="mailto:berch730@gmail.com"><span class="icon icon-envelope"></span><span class="text">berch730@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
