--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
           			<span class="ri-linkedin-fill"></span>
           		</div>
           		<h3 class="mb-4">LinkedIn</h3>
-				<p><a href="www.linkedin.com/in/christophe-berbec-841599345">/in/christophe-berbec</a></p>
+				<p><a href="http://www.linkedin.com/in/christophe-berbec-841599345/">/in/christophe-berbec</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
