--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
           			<span class="ri-linkedin-fill"></span>
           		</div>
           		<h3 class="mb-4">LinkedIn</h3>
-				<p><a href="http://www.linkedin.com/in/christophe-berbec-841599345/">/in/christophe-berbec</a></p>
+				<p><a href="http://www.linkedin.com/in/christophe-berbec-841599345/" target="_blank">/in/christophe-berbec</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -578,7 +578,7 @@
           			<span class="ri-github-fill"></span>
           		</div>
           		<h3 class="mb-4">GitHub</h3>
-				<p><a href="https://github.com/Berbec-Chris">/Berbec-Chris (Archiving in progress)</a></p>
+				<p><a href="https://github.com/Berbec-Chris" target="_blank">/Berbec-Chris (Archiving in progress)</a></p>
 	          </div>
           </div>
         </div>
