--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">Looking for an entry level <span>UI/UX</span> or <span>Product Designer</span> role</h1>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -372,8 +372,8 @@
 							<h3>HTML, CSS, JavaScript</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-							    <span>60%</span>
+							  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+							    <span>75%</span>
 							  	</div>
 							</div>
 						</div>
@@ -619,8 +619,8 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Social</h2>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="ri-linkedin-fill"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="ri-github-fill"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/christophe-berbec-841599345/" target="_blank"><span class="ri-linkedin-fill"></span></a></li>
+                <li class="ftco-animate"><a href="https://github.com/Berbec-Chris" target="_blank"><span class="ri-github-fill"></span></a></li>
               </ul>
             </div>
           </div>
