--- a/index.html
+++ b/index.html
@@ -582,6 +582,8 @@
 	          </div>
           </div>
         </div>
+	</section>
+	<section>
 		<div class="row no-gutters block-9">
 		  <div class="col-md-6 order-md-last d-flex">
 			<form action="https://api.web3forms.com/submit" method="POST" class="bg-light p-4 p-md-5 contact-form">
