--- a/index.html
+++ b/index.html
@@ -554,6 +554,7 @@
 				<p><a href="tel:00352621694022">+352 621 694 022</a></p>
 	          </div>
           </div>
+		  
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
@@ -563,6 +564,7 @@
 				<p><a href="mailto:berch730@gmail.com">berch730@gmail.com</a></p>
 	          </div>
           </div>
+
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
@@ -572,6 +574,17 @@
 				<p><a href="http://www.linkedin.com/in/christophe-berbec-841599345/" target="_blank">/in/christophe-berbec</a></p>
 	          </div>
           </div>
+
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box p-4 text-center">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="ri-github-fill"></span>
+          		</div>
+          		<h3 class="mb-4">GitHub</h3>
+				<p><a href="https://github.com/Berbec-Chris" target="_blank">/Berbec-Chris (Archiving in progress)</a></p>
+	          </div>
+          </div>
+
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
