--- a/index.html
+++ b/index.html
@@ -601,6 +601,9 @@
 			  <div class="form-group">
 			<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
 			  </div>
+			  <div class="form-group">
+			<button type="resume" value="Download CV" class="btn btn-primary py-3 px-5">
+			  </div>
 			</form>
 		  </div>
 
