--- a/index.html
+++ b/index.html
@@ -598,11 +598,13 @@
 			  <div class="form-group">
 			<textarea name="message" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
 			  </div>
-			  <div class="form-group">
-			<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-			  </div>
-			  <div class="form-group">
-			<button type="resume" value="Download CV" class="btn btn-primary py-3 px-5">
+			  <div class="button-form-container">
+				<div class="form-group">
+					<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+				</div>
+				<div class="form-group">
+					<button type="resume" href="/pages/resume.pdf" target="_blank"  class="btn btn-primary py-3 px-5">Download Resume</button>
+				</div>
 			  </div>
 			</form>
 		  </div>
