--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 					<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
 				</div>
 				<div class="form-group">
-					<button type="resume" href="/pages/resume.pdf" target="_blank"  class="btn btn-primary py-3 px-5">Download Resume</button>
+					<button type="resume" href="/pages/resume.pdf" target="_blank"  class="btn btn-primary py-3 px-5" style="color: transparent; border-width: 3px;">Download Resume</button>
 				</div>
 			  </div>
 			</form>
