--- a/index.html
+++ b/index.html
@@ -142,6 +142,23 @@
           </div>
         </div>
     		<div class="row">
+
+				<div class="col-md-6">
+    				<div class="resume-wrap ftco-animate">
+    					<span class="date">2025-Current job</span>
+    					<h2>Independant Full-Stack Developer</h2>
+    					<span class="position">Luxembourg</span>
+    					<p class="mt-4">Built a custom company architecture website. The original website was coded in Flash, which isn't supported by most modern browsers. I utilized HTML5, CSS3, and JavaScript to create a responsive and user-friendly interface. Modified the design to be more dynamic and use the assets to their fullest. Kept the general visual identity of the original website.
+							
+						</p>
+    				</div>
+    				<div class="resume-wrap ftco-animate">
+    					<span class="date">2025-Current job</span>
+    					<h2>Pedagogical Assistant @ECG</h2>
+    					<span class="position">Luxembourg</span>
+    					<p class="mt-4">I am currently working as a pedagogical assistant at ECG, where I support teachers staff and students in their daily needs. Main tasks: teacher substitutions, library management, and plenty of administration work.</p>
+    				</div>
+    			</div>
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2024</span>
@@ -161,6 +178,7 @@
 							<br></p>
     				</div>
     			</div>
+
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
