--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     					<span class="date">2025-Current job</span>
     					<h2>Independant Full-Stack Developer</h2>
     					<span class="position">Luxembourg</span>
-    					<p class="mt-4">Built a custom company architecture website. Built GDPR-compliant automation processes for facilitating administrative work The original website was coded in Flash, which isn't supported by most modern browsers. I utilized HTML5, CSS3, and JavaScript to create a responsive and user-friendly interface. Modified the design to be more dynamic and use the assets to their fullest. Kept the general visual identity of the original website.
+    					<p class="mt-4">Built GDPR-compliant automation processes for facilitating administrative work. Built a custom company architecture website (<a href="https://www.stanberbec.lu">link</a>). The original website was coded in Flash, which isn't supported by most modern browsers. I utilized HTML5, CSS3, and JavaScript to create a responsive and user-friendly interface. Modified the design to be more dynamic and use the assets to their fullest. Kept the general visual identity of the original website.
 						</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
