--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     					<span class="date">2025-Current job</span>
     					<h2>Independant Full-Stack Developer</h2>
     					<span class="position">Luxembourg</span>
-    					<p class="mt-4">Built GDPR-compliant automation processes for facilitating administrative work. Built a custom company architecture website (<a href="https://www.stanberbec.lu">link</a>). The original website was coded in Flash, which isn't supported by most modern browsers. I utilized HTML5, CSS3, and JavaScript to create a responsive and user-friendly interface. Modified the design to be more dynamic and use the assets to their fullest. Kept the general visual identity of the original website.
+    					<p class="mt-4">Built GDPR-compliant automation processes for facilitating administrative work. Built a custom company architecture website <a href="https://www.stanberbec.lu">link</a>. The original website was coded in Flash, which isn't supported by most modern browsers. I utilized HTML5, CSS3, and JavaScript to create a responsive and user-friendly interface. Modified the design to be more dynamic and use the existing assets to their fullest. Kept the general visual identity of the original website.
 						</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
@@ -155,9 +155,6 @@
     					<h2>Graduated BSc in Interaction Design</h2>
     					<span class="position">Malmö University</span>
     					<p class="mt-4">Det var ett nöje att vara här!<br>
-							<br>
-							<br>
-							<br>
 							<br></p>
     				</div>
     				<div class="resume-wrap ftco-animate">
@@ -183,7 +180,7 @@
     					<h2>Freelance UX/UI Design Advisor</h2>
     					<span class="position">Brussels</span>
     					<p class="mt-4">Sporadic Freelance Interaction Design and UI/UX consulting for small company websites. Collaborated with a small business of independent web programmers based in Brussels.<br>
-							<br></p>$
+							<br></p>
     				</div>
 					<div class="resume-wrap ftco-animate">
     					<span class="date">2018-Present</span>
