--- a/index.html
+++ b/index.html
@@ -457,49 +457,58 @@
           </div>
         </div>
     		<div class="row">
-    			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+				<div class="col-md-4" href="https://www.stanberbec.lu" target="_blank">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="https://www.stanberbec.lu" target="_blank" style="background-image: url(images/project-8.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="/pages/project-3-page.pdf" target="_blank">Interactivity</a></h3>
+	    					<h3>Independent Full-Stack Web Dev project</h3>
+	    					<span>click to visit</span>
+	    				</div>
+    				</div>
+  				</div>
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="/pages/project-3-page.pdf" target="_blank" style="background-image: url(images/project-3.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3>Interactivity</h3>
 	    					<span>Course Journal Archive</span>
 	    				</div>
     				</div>
   				</div>
-  				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+  				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="/pages/project-1-page.pdf" target="_blank" style="background-image: url(images/project-1.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="/pages/project-1-page.pdf" target="_blank">Increasing user engagement in WRC leveraging Interactive technologies</a></h3>
+	    					<h3>Increasing user engagement in WRC leveraging Interactive technologies</h3>
 	    					<span>Final Degree Thesis</span>
 	    				</div>
     				</div>
   				</div>
 
     			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="/pages/project-2-page.pdf" target="_blank" style="background-image: url(images/project-2.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="/pages/project-2-page.pdf" target="_blank">Poppy the Shy Wall</a></h3>
+	    					<h3>Poppy the Shy Wall</h3>
 	    					<span>Studio II Course Hand-In PDF</span>
 	    				</div>
     				</div>
 
 					<div class="row">
 						<div class="col-md-6">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="images/project-5.jpg" target="_blank" style="background-image: url(images/project-5.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center p-4">
-									<h3><a href="images/project-5.jpg" target="_blank">2D CAD &amp; 3D Modelling</a></h3>
+									<h3>2D CAD &amp; 3D Modelling</h3>
 									<span>Mathendahl, Niederkorn, Luxembourg</span>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="images/project-6.jpg" target="_blank" style="background-image: url(images/project-6.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center p-4">
-									<h3><a href="images/project-6.jpg" target="_blank">2D Illustrations and development of preliminary draft</a></h3>
+									<h3>2D Illustrations and development of preliminary draft</h3>
 									<span>Remich, Luxembourg</span>
 								</div>
 							</div>
@@ -509,19 +518,19 @@
     			<div class="col-md-4">
     				<div class="row">
     					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="/pages/project-4-page.pdf" target="_blank" style="background-image: url(images/project-4.jpg);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="/pages/project-4-page.pdf" target="_blank">Tangible &amp; Embodied Interaction (TEI)</a></h3>
+			    					<h3>Tangible &amp; Embodied Interaction (TEI)</h3>
 			    					<span>Course Journal Archive</span>
 			    				</div>
 		    				</div>
 	    				</div>
 	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-7.jpg);">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="images/project-7.jpg" target="_blank" style="background-image: url(images/project-7.jpg);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="images/project-7.jpg" target="_blank">2D CAD Drafting</a></h3>
+			    					<h3>2D CAD Drafting</h3>
 			    					<span>Rollingergrund, Luxembourg</span>
 			    				</div>
 		    				</div>
