--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
           </div>
         </div>
     		<div class="row">
-				<div class="col-md-4" href="https://www.stanberbec.lu" target="_blank">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="https://www.stanberbec.lu" target="_blank" style="background-image: url(images/project-8.jpg);">
-    					<div class="overlay"></div>
+				<div class="col-md-4" >
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-8.jpg);">
+    					<div class="overlay" href="https://www.stanberbec.lu" target="_blank"></div>
 	    				<div class="text text-center p-4">
 	    					<h3>Independent Full-Stack Web Dev project</h3>
 	    					<span>click to visit</span>
@@ -467,8 +467,8 @@
     				</div>
   				</div>
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="/pages/project-3-page.pdf" target="_blank" style="background-image: url(images/project-3.jpg);">
-    					<div class="overlay"></div>
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+    					<div class="overlay" href="/pages/project-3-page.pdf" target="_blank"></div>
 	    				<div class="text text-center p-4">
 	    					<h3>Interactivity</h3>
 	    					<span>Course Journal Archive</span>
@@ -476,8 +476,8 @@
     				</div>
   				</div>
   				<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="/pages/project-1-page.pdf" target="_blank" style="background-image: url(images/project-1.jpg);">
-    					<div class="overlay"></div>
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+    					<div class="overlay"  href="/pages/project-1-page.pdf" target="_blank"></div>
 	    				<div class="text text-center p-4">
 	    					<h3>Increasing user engagement in WRC leveraging Interactive technologies</h3>
 	    					<span>Final Degree Thesis</span>
@@ -486,8 +486,8 @@
   				</div>
 
     			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="/pages/project-2-page.pdf" target="_blank" style="background-image: url(images/project-2.jpg);">
-    					<div class="overlay"></div>
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+    					<div class="overlay" href="/pages/project-2-page.pdf" target="_blank"></div>
 	    				<div class="text text-center p-4">
 	    					<h3>Poppy the Shy Wall</h3>
 	    					<span>Studio II Course Hand-In PDF</span>
@@ -496,8 +496,8 @@
 
 					<div class="row">
 						<div class="col-md-6">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="images/project-5.jpg" target="_blank" style="background-image: url(images/project-5.jpg);">
-								<div class="overlay"></div>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+								<div class="overlay"  href="images/project-5.jpg" target="_blank"></div>
 								<div class="text text-center p-4">
 									<h3>2D CAD &amp; 3D Modelling</h3>
 									<span>Mathendahl, Niederkorn, Luxembourg</span>
@@ -505,8 +505,8 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="images/project-6.jpg" target="_blank" style="background-image: url(images/project-6.jpg);">
-								<div class="overlay"></div>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+								<div class="overlay" href="images/project-6.jpg" target="_blank"></div>
 								<div class="text text-center p-4">
 									<h3>2D Illustrations and development of preliminary draft</h3>
 									<span>Remich, Luxembourg</span>
@@ -518,8 +518,8 @@
     			<div class="col-md-4">
     				<div class="row">
     					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="/pages/project-4-page.pdf" target="_blank" style="background-image: url(images/project-4.jpg);">
-		    					<div class="overlay"></div>
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+		    					<div class="overlay" href="/pages/project-4-page.pdf" target="_blank"></div>
 			    				<div class="text text-center p-4">
 			    					<h3>Tangible &amp; Embodied Interaction (TEI)</h3>
 			    					<span>Course Journal Archive</span>
@@ -527,8 +527,8 @@
 		    				</div>
 	    				</div>
 	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" href="images/project-7.jpg" target="_blank" style="background-image: url(images/project-7.jpg);">
-		    					<div class="overlay"></div>
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-7.jpg);">
+		    					<div class="overlay" href="images/project-7.jpg" target="_blank"></div>
 			    				<div class="text text-center p-4">
 			    					<h3>2D CAD Drafting</h3>
 			    					<span>Rollingergrund, Luxembourg</span>
