--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact</h2>
-            <p>For any inquieries do not hesitate to contact me!</p>
+            <p>For any inquieries you are welcome to contact me!</p>
           </div>
         </div>
 
