--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
     		<div class="row">
 				<div class="col-md-4" >
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-8.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-8.png);">
     					<div class="overlay" href="https://www.stanberbec.lu" target="_blank"></div>
 	    				<div class="text text-center p-4">
 	    					<h3>Independent Full-Stack Web Dev project</h3>
