--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 					<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
 				</div>
 				<div>
-					<button type="resume" href="/pages/resume.pdf" target="_blank"  class="btn btn-primary py-3 px-5" style="background-color: transparent !important; border-width: 3px !important;">Download Resume</button>
+					<a href="/pages/resume.pdf" target="_blank" class="btn btn-primary py-3 px-5" style="background-color: transparent !important; border-width: 3px !important;">Download Resume</a>
 				</div>
 			  </div>
 			</form>
