--- a/index.html
+++ b/index.html
@@ -494,49 +494,48 @@
 						</div>
 					</a>
 					<div class="row">
-						<div class="col-md-4"></div>
-							<a href="images/project-5.jpg" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg); text-decoration: none;">
-								<div class="overlay"></div>
+						<div class="col-md-6">
+						<div class="col-md-6">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+								<div class="overlay"  href="images/project-5.jpg" target="_blank"></div>
 								<div class="text text-center p-4">
 									<h3>2D CAD &amp; 3D Modelling</h3>
 									<span>Mathendahl, Niederkorn, Luxembourg</span>
 								</div>
-							</a>
+							</div>
 						</div>
-						<div class="col-md-4">
-							<a href="images/project-6.jpg" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg); text-decoration: none;">
-								<div class="overlay"></div>
+						<div class="col-md-6">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+								<div class="overlay" href="images/project-6.jpg" target="_blank"></div>
 								<div class="text text-center p-4">
 									<h3>2D Illustrations and development of preliminary draft</h3>
 									<span>Remich, Luxembourg</span>
 								</div>
-							</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="row">
-						<div class="col-md-12"></div>
-							<a href="/pages/project-4-page.pdf" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg); text-decoration: none;">
-								<div class="overlay"></div>
-								<div class="text text-center p-4">
-									<h3>Tangible &amp; Embodied Interaction (TEI)</h3>
-									<span>Course Journal Archive</span>
-								</div>
-							</a>
-						</div>
-						<div class="col-md-4">
-							<a href="images/project-7.jpg" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-7.jpg); text-decoration: none;">
-								<div class="overlay"></div>
-								<div class="text text-center p-4">
-									<h3>2D CAD Drafting</h3>
-									<span>Rollingergrund, Luxembourg</span>
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
+    			</div>
+    			<div class="col-md-4">
+    				<div class="row">
+    					<div class="col-md-12">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+		    					<div class="overlay" href="/pages/project-4-page.pdf" target="_blank"></div>
+			    				<div class="text text-center p-4">
+			    					<h3>Tangible &amp; Embodied Interaction (TEI)</h3>
+			    					<span>Course Journal Archive</span>
+			    				</div>
+		    				</div>
+	    				</div>
+	    				<div class="col-md-12">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-7.jpg);">
+		    					<div class="overlay" href="images/project-7.jpg" target="_blank"></div>
+			    				<div class="text text-center p-4">
+			    					<h3>2D CAD Drafting</h3>
+			    					<span>Rollingergrund, Luxembourg</span>
+			    				</div>
+		    				</div>
+	    				</div>
+    				</div>
     			</div>
     		</div>
     	</div>
